fix:  can't add trusted dns server via allowed-ips

--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -282,6 +282,8 @@ jobs:
           enable-sudo: false
           allowed-domains: |
             *.google.com
+          allowed-ips: |
+            1.1.1.1
 
       - name: Make HTTP requests
         run: |
