--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -367,55 +367,17 @@ jobs:
   test-integration:
     needs: build
     runs-on: ubuntu-24.04
-    timeout-minutes: 10
-
+    timeout-minutes: 5
     steps:
-      # TODO: Re-enable after we fix the bug with audit mode blocking untrusted DNS servers
-      # - name: Enable egress filtering
-      #   uses: bullfrogsec/bullfrog@4a9cb341c9259028c5aa8a132452004399f8c2db # v0.9.1
-      #   with:
-      #     # Don't put in blocking mode, we don't want to interfere with the integration test running in the vagrant VM
-      #     egress-policy: audit
-      #     allowed-domains: |
-      #       *.canonical.com
-      #       *.github.com
-      #       *.ubuntu.com
-      #       archivist.vagrantup.com
-      #       deb.nodesource.com
-      #       dl.google.com
-      #       download.docker.com
-      #       go.dev
-      #       *.githubusercontent.com
-      #       packages.microsoft.com
-      #       vagrantcloud-files-production.s3-accelerate.amazonaws.com
-      #       vagrantcloud.com
-      #       www.google.com
-      #       *.docker.io
-      #       production.cloudflare.docker.com
-      #       docker-images-prod.*.r2.cloudflarestorage.com
-      #       *.hashicorp.com
-      #     allowed-ips: |
-      #       1.1.1.1
-
       - name: Checkout
-        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3
 
-      - uses: actions/download-artifact@018cc2cf5baa6db3ef3c5f8a56943fffe632ef53 # v6.0.0
+      - uses: actions/download-artifact@018cc2cf5baa6db3ef3c5f8a56943fffe632ef53
         with:
           name: build-artifacts
 
-      - name: Install Dependencies
-        run: |
-          wget -O- https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
-          echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
-          sudo apt-get update
-          sudo apt-get install --yes vagrant virtualbox
-
-      - name: Start VM
-        run: make vagrant.up
-
-      - name: Run Tests
-        run: make test.integration
+      - name: Run integration test
+        run: bash ./test/block.sh
 
   # TODO: Rename to something else since it runs test.lint and test.types
   test-lint:
